--- a/group_vars/satellite.yaml
+++ b/group_vars/satellite.yaml
@@ -18,13 +18,13 @@ open_ports:
 - 9090/tcp
 
 # name of the organization that will be configured
-organization: "Tures Org"
+organization: ""
 
 # one initial location (more can be added later)
-location: "Malmo"
+location: ""
 
 # initial password for the adminstrator account (can be changed later)
-admin_password: "redhat123"
+admin_password: ""
 
 ###
 # variables for sat6-configure.yaml
@@ -54,10 +54,6 @@ rhel_repositories:
   name: Red Hat Enterprise Linux 7 Server - Extras (RPMs)
   basearch: x86_64
 
-- product: Red Hat Enterprise Linux Server
-  name: Red Hat Enterprise Linux 7 Server (Kickstart) 
-  basearch: x86_64
-  releasever: 7.3
 
 - product: Red Hat OpenShift Container Platform
   name: Red Hat OpenShift Container Platform 3.5 (RPMs)
@@ -124,24 +120,7 @@ profiles:
     product: Red Hat Enterprise Linux Server
   - name: Red Hat Enterprise Linux 7 Server Kickstart x86_64 7.3
     product: Red Hat Enterprise Linux Server
-  subscription: Red Hat Enterprise Linux Server, Standard (Physical or Virtual Nodes)
- 
-- name: Tower
-  rhel_major: 7
-  repos:
-  - name: Red Hat Enterprise Linux 7 Server RPMs x86_64 7Server
-    product: Red Hat Enterprise Linux Server
-  - name: Red Hat Satellite Tools 6.2 for RHEL 7 Server RPMs x86_64
-    product: Red Hat Enterprise Linux Server
-  - name: Red Hat Enterprise Linux 7 Server Kickstart x86_64 7.3
-    product: Red Hat Enterprise Linux Server
-  - name: Red Hat Enterprise Linux 7 Server - Optional RPMs x86_64 7Server
-    product: Red Hat Enterprise Linux Server
-  - name: Red Hat Enterprise Linux 7 Server - Extras RPMs x86_64
-    product: Red Hat Enterprise Linux Server
-  - name: EPEL7
-    product: Extra Packages for Enterprise Linux
-  subscription: Red Hat Enterprise Linux Server, Standard (Physical or Virtual Nodes)
+  subscription: "{{ rhel_subscription_name }}"
 
 - name: Openshift
   rhel_major: 7
@@ -158,5 +137,5 @@ profiles:
     product: Red Hat Enterprise Linux Fast Datapath
   - name: Red Hat OpenShift Container Platform 3.5 RPMs x86_64
     product: Red Hat OpenShift Container Platform
-  subscription: OpenShift Enterprise Infrastructure
+  subscription: "{{ openshift_subscription_name }}"
 
