--- a/sat6-install.yaml
+++ b/sat6-install.yaml
@@ -4,25 +4,80 @@
   connection: local
   tasks:
 
+  - name: create xfs fs on drive
+    filesystem: 
+      fstype: xfs
+      dev: /dev/sdb
+  
+  - name: create xfs fs on drive
+    filesystem: 
+      fstype: xfs
+      dev: /dev/sdc
+
+  - name: create xfs fs on drive
+    filesystem: 
+      fstype: xfs
+      dev: /dev/sdd
+
+  - name: mount /var/lib/mongodb
+    mount:
+      src: /dev/sdb
+      path: /var/lib/mongodb
+      state: present
+      fstype: xfs
+
+  - name: mount /var/lib/pgsql
+    mount:
+      src: /dev/sdc
+      path: /var/lib/pgsql
+      state: present
+      fstype: xfs
+
+  - name: mount /var/lib/pulp
+    mount:
+      src: /dev/sdd
+      path: /var/lib/pulp
+      state: present
+      fstype: xfs
+
+
+  - name: subscribe to access.redhat.com, will take a while..
+    redhat_subscription:
+      state: present
+      username: '{{ rhsm_username }}'
+      password: '{{ rhsm_password }}'
+
   - name: disable all repositories
     command: "subscription-manager repos --disable '*'"
 
   - name: enable satellite 6 repositories
     command: "subscription-manager repos --enable rhel-7-server-rpms --enable rhel-server-rhscl-7-rpms --enable rhel-7-server-satellite-6.2-rpms"
 
-  - name: make sure firewalld is enabled and running
-    service:
-      name: firewalld
-      state: started
-      enabled: true
+  - name: install ntp
+    yum:
+      name: chrony
+      state: latest
 
-  - name: open firewalld ports
-    firewalld:
-      immediate: yes
-      permanent: yes
-      state: enabled
-      port: "{{ item }}"
-    with_items: "{{ open_ports }}" 
+  - name: make sure chrony runs
+    service:
+      ensure: running
+      name: chrony
+
+
+      #
+      #  - name: make sure firewalld is enabled and running
+      #    service:
+      #      name: firewalld
+      #      state: started
+      #      enabled: true
+      #
+      #  - name: open firewalld ports
+      #    firewalld:
+      #      immediate: yes
+      #      permanent: yes
+      #      state: enabled
+      #      port: "{{ item }}"
+      #    with_items: "{{ open_ports }}" 
 
   - name: make sure selinux is in enforcing mode
     selinux:
@@ -31,6 +86,8 @@
 
 # these tasks verify that DNS is configured properly
 # if any of these tasks fail, the installation won't complete successully
+  - name: set hostname
+    command: "hostnamectl set-hostname {{ satellite_hostname }}"
 
   - name: verify localhost resolution
     command: "ping -c1 localhost"
