--- a/sat6-install.yaml
+++ b/sat6-install.yaml
@@ -49,20 +49,27 @@
       regexp: '^proxy_port \='
       state: present
 
-  - name: subscribe to access.redhat.com, will take a while..
-    redhat_subscription:
-      state: present
-      username: '{{ rhsm_username }}'
-      password: '{{ rhsm_password }}'
-
-  - name: attach to Satellite Pool
-    command: "subscription-manager attach --pool {{ rhsm_pool_id }}"
+  - block:
+    - name: subscribe to access.redhat.com, will take a while..
+      redhat_subscription:
+        state: present
+        username: '{{ rhsm_username }}'
+        password: '{{ rhsm_password }}'
+  
+    - name: attach to Satellite Pool
+      command: "subscription-manager attach --pool {{ rhsm_pool_id }}"
+    tags: subscription
 
   - name: disable all repositories
     command: "subscription-manager repos --disable '*'"
 
   - name: enable satellite 6 repositories
     command: "subscription-manager repos --enable rhel-7-server-rpms --enable rhel-server-rhscl-7-rpms --enable rhel-7-server-satellite-6.2-rpms"
+
+  - name: remove amazon subman plugins
+    yum: 
+      name: rh-amazon-rhui*
+      state: absent
 
   - name: install ntp
     yum:
@@ -71,8 +78,8 @@
 
   - name: make sure chrony runs
     service:
-      ensure: running
-      name: chrony
+      state: started
+      name: chronyd
 
 
       #
@@ -140,8 +147,20 @@
       msg: "The installation is now complete. A reboot might be in place if yum updated packages that required reboot. After that it is time to configure your Satellite. This can be done with sat6-configure.yaml"
   - name: run satellite-installer with proxy
     command: >
-      --katello-proxy-url='{{ proxy_hostname }}' \
-      --katello-proxy-port='{{ proxy_port }}' \
-      {% if proxy_username is defined %} --katello-proxy-username='{{ proxy_username }}' \ {% endif %}
-      {% if proxy_password is defined %} --katello-proxy-password='{{ proxy_password }}' \ {% endif %}
+      satellite-installer \
+      --katello-proxy-url=http://'{{ proxy_hostname }}' 
+      --katello-proxy-port='{{ proxy_port }}' 
+      {% if proxy_username is defined %} --katello-proxy-username='{{ proxy_username }}' {% endif %}
+      {% if proxy_password is defined %} --katello-proxy-password='{{ proxy_password }}' {% endif %}
+    when: proxy_hostname is defined
+
+  - name: set global proxy vars
+    lineinfile:
+      path: /etc/environment
+      line: "https_proxy={{ proxy_hostname }}:{{ proxy_port }}"
+    when: proxy_hostname is defined
+  - name: set global proxy vars
+    lineinfile:
+      path: /etc/environment
+      line: "http_proxy={{ proxy_hostname }}:{{ proxy_port }}"
     when: proxy_hostname is defined
