Fix quotation mark in capsule-certs-generate
The " was in the end of command instead of around the tar file name.

--- a/capsule-install.yaml
+++ b/capsule-install.yaml
@@ -55,7 +55,7 @@
       state: latest 
 
   - name: generate capsule certificates (run locally on satellite server)
-    command: capsule-certs-generate --capsule-fqdn "{{ ansible_fqdn }}" --certs-tar "{{ playbook_dir }}/files/{{ ansible_fqdn }}.tar --no-colors"
+    command: capsule-certs-generate --capsule-fqdn "{{ ansible_fqdn }}" --certs-tar "{{ playbook_dir }}/files/{{ ansible_fqdn }}.tar" --no-colors
     register: certs_output
     connection: local
 
