--- a/group_vars/satellite.yaml
+++ b/group_vars/satellite.yaml
@@ -18,10 +18,10 @@ open_ports:
 - 9090/tcp
 
 # name of the organization that will be configured
-organization: "Tures Org"
+organization: "Ture Inc"
 
-# one initial location (more can be added later)
-location: "Malmo"
+# one initial location (if you need more, create them manually) 
+initial_location: "Copenhagen"
 
 # initial password for the adminstrator account (can be changed later)
 admin_password: "redhat123"
@@ -35,15 +35,18 @@ manifest: files/manifest.zip
 
 # add a list of what RHEL repositories you want to sync
 # specify product and repository name, architecture (x86_64 or i386 etc) and optionally release version for repositories that require that
-rhel_repositories:
+redhat_repositories:
+
+# Red Hat Enterprise Linux Server
+
+- product: Red Hat Enterprise Linux Server
+  name: Red Hat Satellite Tools 6.4 (for RHEL 7 Server) (RPMs)
+  basearch: x86_64
+
 - product: Red Hat Enterprise Linux Server
   name: Red Hat Enterprise Linux 7 Server (RPMs)
   basearch: x86_64
   releasever: 7Server
-
-- product: Red Hat Enterprise Linux Server
-  name: Red Hat Satellite Tools 6.2 (for RHEL 7 Server) (RPMs)
-  basearch: x86_64
 
 - product: Red Hat Enterprise Linux Server
   name: Red Hat Enterprise Linux 7 Server - Optional (RPMs)
@@ -51,31 +54,43 @@ rhel_repositories:
   releasever: 7Server
 
 - product: Red Hat Enterprise Linux Server
+  name: Red Hat Enterprise Linux 7 Server (Kickstart)
+  basearch: x86_64
+  releasever: 7.6
+
+- product: Red Hat Enterprise Linux Server
   name: Red Hat Enterprise Linux 7 Server - Extras (RPMs)
   basearch: x86_64
 
 - product: Red Hat Enterprise Linux Server
-  name: Red Hat Enterprise Linux 7 Server (Kickstart) 
-  basearch: x86_64
-  releasever: 7.3
-
-- product: Red Hat OpenShift Container Platform
-  name: Red Hat OpenShift Container Platform 3.5 (RPMs)
+  name: Red Hat Satellite Maintenance 6 (for RHEL 7 Server) (RPMs)
   basearch: x86_64
 
-- product: Red Hat Enterprise Linux Fast Datapath
-  name: Red Hat Enterprise Linux Fast Datapath (RHEL 7 Server) (RPMs)
+# Red Hat Software Collections for RHEL Server
+
+- product: Red Hat Software Collections for RHEL Server
+  name: Red Hat Software Collections RPMs for Red Hat Enterprise Linux 7 Server
   basearch: x86_64
   releasever: 7Server
 
-# note: the above repositories correspond to the following hammer commands
-# hammer repository-set enable --product 'Red Hat Enterprise Linux Server' --name 'Red Hat Enterprise Linux 7 Server (RPMs)' --basearch 'x86_64' --releasever '7Server'
-# hammer repository-set enable --product 'Red Hat Enterprise Linux Server' --name 'Red Hat Satellite Tools 6.2 (for RHEL 7 Server) (RPMs)' --basearch 'x86_64'
-# hammer repository-set enable --product 'Red Hat Enterprise Linux Server' --name 'Red Hat Enterprise Linux 7 Server - Optional (RPMs)' --basearch 'x86_64' --releasever '7Server'
-# hammer repository-set enable --product 'Red Hat Enterprise Linux Server' --name 'Red Hat Enterprise Linux 7 Server - Extras (RPMs)' --basearch 'x86_64'
-# hammer repository-set enable --product 'Red Hat Enterprise Linux Server' --name 'Red Hat Enterprise Linux 7 Server (Kickstart)' --basearch 'x86_64' --releasever '7.3'
-# hammer repository-set enable --product 'Red Hat OpenShift Container Platform' --name 'Red Hat OpenShift Container Platform 3.5 (RPMs)' --basearch 'x86_64'
-# hammer repository-set enable --product 'Red Hat Enterprise Linux Fast Datapath' --name 'Red Hat Enterprise Linux Fast Datapath (RHEL 7 Server) (RPMs)' --basearch 'x86_64' --releasever '7Server'
+# Red Hat Satellite Capsule 
+
+- product: Red Hat Satellite Capsule
+  name: Red Hat Satellite Capsule 6.4 (for RHEL 7 Server) (RPMs)
+  basearch: x86_64
+
+# Red Hat Enterprise Linux High Availability for RHEL Server
+
+- product: Red Hat Enterprise Linux High Availability for RHEL Server
+  name: Red Hat Enterprise Linux High Availability (for RHEL 7 Server) (RPMs)
+  basearch: x86_64
+  releasever: 7Server
+
+# Red Hat Ansible Engine
+
+- product: Red Hat Ansible Engine
+  name: Red Hat Ansible Engine 2.6 RPMs for Red Hat Enterprise Linux 7 Server
+  basearch: x86_64
 
 # specify a list of major versions of RHEL you want to manage with Satellite (5, 6, 7...) (in this case only RHEL 7 servers are used)
 rhel_major_versions:
@@ -85,11 +100,12 @@ rhel_major_versions:
 # the playbook will then create products, repositories, GPG keys accordingly
 # this is an example on how to setup EPEL 7
 custom_products:
-- name: Extra Packages for Enterprise Linux
+
+- name: EPEL
   repositories:
-  - name: EPEL7
-    url: https://dl.fedoraproject.org/pub/epel/7/x86_64/
-    gpg_key: https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-7
+  - name: EPEL RHEL7
+    url: http://dl.fedoraproject.org/pub/epel/7Server/x86_64/
+    gpg_key: https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-7 
     content_type: yum
 
 # specify if you want to set download policy to "immediate" or "on_demand" for all repositories.
@@ -110,53 +126,44 @@ lifecycle_environments:
 
 # define what kind of server profiles you want to create. a profile defines a RHEL major version, a set of repositories and one or more subscriptions.
 # the playbook will then create the following:
-# - a content view for the profile with the following naming scheme: CV-RHEL<rhel_major>-<profile_name>, e.g. CV-RHEL7-Base for the first group example below
+# - a content view for the profile with the following naming scheme: CV-<profile_name>, e.g. CV-RHEL7 for the first group example below
 # - one activation key per lifecycle environment that use the content view and assign the specified RHEL major version and subscription to the hosts that register with this key
 # - host collections
 # - host groups
 profiles:
-- name: Base
+
+- name: "RHEL7"
   rhel_major: 7
+
   repos:
+
   - name: Red Hat Enterprise Linux 7 Server RPMs x86_64 7Server
     product: Red Hat Enterprise Linux Server
-  - name: Red Hat Satellite Tools 6.2 for RHEL 7 Server RPMs x86_64
+  - name: Red Hat Satellite Tools 6.4 for RHEL 7 Server RPMs x86_64
     product: Red Hat Enterprise Linux Server
-  - name: Red Hat Enterprise Linux 7 Server Kickstart x86_64 7.3
+  - name: Red Hat Enterprise Linux 7 Server Kickstart x86_64 7.6
     product: Red Hat Enterprise Linux Server
-  subscription: Red Hat Enterprise Linux Server, Standard (Physical or Virtual Nodes)
- 
-- name: Tower
+
+  subscriptions:
+  - "Red Hat Enterprise Linux"
+
+- name: "RHEL7-Tower"
   rhel_major: 7
+
   repos:
+
   - name: Red Hat Enterprise Linux 7 Server RPMs x86_64 7Server
     product: Red Hat Enterprise Linux Server
-  - name: Red Hat Satellite Tools 6.2 for RHEL 7 Server RPMs x86_64
+  - name: Red Hat Satellite Tools 6.4 for RHEL 7 Server RPMs x86_64
     product: Red Hat Enterprise Linux Server
-  - name: Red Hat Enterprise Linux 7 Server Kickstart x86_64 7.3
-    product: Red Hat Enterprise Linux Server
-  - name: Red Hat Enterprise Linux 7 Server - Optional RPMs x86_64 7Server
+  - name: Red Hat Enterprise Linux 7 Server Kickstart x86_64 7.6
     product: Red Hat Enterprise Linux Server
   - name: Red Hat Enterprise Linux 7 Server - Extras RPMs x86_64
     product: Red Hat Enterprise Linux Server
-  - name: EPEL7
-    product: Extra Packages for Enterprise Linux
-  subscription: Red Hat Enterprise Linux Server, Standard (Physical or Virtual Nodes)
+  - name: EPEL RHEL7
+    product: EPEL
+    
 
-- name: Openshift
-  rhel_major: 7
-  repos:
-  - name: Red Hat Enterprise Linux 7 Server RPMs x86_64 7Server
-    product: Red Hat Enterprise Linux Server
-  - name: Red Hat Satellite Tools 6.2 for RHEL 7 Server RPMs x86_64
-    product: Red Hat Enterprise Linux Server
-  - name: Red Hat Enterprise Linux 7 Server Kickstart x86_64 7.3
-    product: Red Hat Enterprise Linux Server
-  - name: Red Hat Enterprise Linux 7 Server - Extras RPMs x86_64
-    product: Red Hat Enterprise Linux Server
-  - name: Red Hat Enterprise Linux Fast Datapath RHEL 7 Server RPMs x86_64 7Server
-    product: Red Hat Enterprise Linux Fast Datapath
-  - name: Red Hat OpenShift Container Platform 3.5 RPMs x86_64
-    product: Red Hat OpenShift Container Platform
-  subscription: OpenShift Enterprise Infrastructure
-
+  subscriptions:
+  - "Red Hat Enterprise Linux"
+  - "EPEL"
